# oepul-chat

./: .env.default  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
notebooks/: 01_scrape_oepul.ipynb  02_create_indices.ipynb  02_rag_llama_index.ipynb  04_eval.ipynb  index_search.ipynb  parse_eval_txt.py  rag_langchain.ipynb  rag_llama_index.ipynb  scrape-oepul.ipynb
notebooks/old/: 03_invekos.ipynb  pdf.ipynb  rag_langchain.ipynb
oepul_chat/: __init__.py  custom_pdf_reader.py  data_download.py  evaluate.py  evaluate_response.py  evaluate_retriever.py  query_engine.py  rag.py  rag_oepul_string_query_engine.py  utils.py
oepul_chat/index_build/: create_normal_index.py  create_summary_index.py
oepul_chat/readers/: custom_full_pdf_reader.py  custom_html_reader.py  custom_pdf_reader.py
results/: eval_results.json  eval_retriever_results.csv  eval_retriever_results.tex  eval_set_with_answers.json  header_path_mappings.txt  summaries.txt
tmp/: eval_results.json  eval_set_new.json  first_doc_text.txt  hierarchy.json  structure.json
